--- a/.github/workflows/OrangeFox-Compile.yml
+++ b/.github/workflows/OrangeFox-Compile.yml
@@ -20,19 +20,19 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree'
         required: true
-        default: 'https://github.com/ymdzq/OFRP-device_xiaomi_mondrian'
+        default: 'https://github.com/f1781600921/android_device_IH519Gtest'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch'
         required: true
-        default: 'fox_12.1-a13'
+        default: 'main'
       DEVICE_PATH:
         description: 'Specify your device path.'
         required: true
-        default: 'device/xiaomi/mondrian'
+        default: 'device/ecarx/IHU519G'
       DEVICE_NAME:
         description: 'Specify your Device Codename.'
         required: true
-        default: 'mondrian'
+        default: 'IHU519G'
       BUILD_TARGET:
         description: 'Specify your Build Target'
         required: true
