--- a/.github/workflows/OrangeFox-Compile.yml
+++ b/.github/workflows/OrangeFox-Compile.yml
@@ -20,19 +20,19 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree'
         required: true
-        default: 'https://github.com/f1781600921/android_device_IH519Gtest'
+        default: 'https://github.com/cd-Crypton/custom_recovery_tree_realme_nashc'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch'
         required: true
-        default: 'main'
+        default: 'android-12.1'
       DEVICE_PATH:
         description: 'Specify your device path.'
         required: true
-        default: 'device/ecarx/IHU519G'
+        default: 'device/realme/nashc'
       DEVICE_NAME:
         description: 'Specify your Device Codename.'
         required: true
-        default: 'IHU519G'
+        default: 'nashc'
       BUILD_TARGET:
         description: 'Specify your Build Target'
         required: true
@@ -82,30 +82,6 @@ jobs:
         cd sync
         ./orangefox_sync.sh --branch ${{ github.event.inputs.MANIFEST_BRANCH }} --path ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
 
-    - name: Patching the Source Code
-      run: |
-        cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
-        sed -i '/<remove-project name="platform\/external\/gflags"  \/>/d' ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/.repo/manifests/remove-minimal.xml
-        sed -i '/<project path="bootable\/recovery" name="android_bootable_recovery" remote="TeamWin" revision="android-12.1"\/>/d' ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/.repo/manifests/twrp-default.xml
-        sed -i 's/<project name="android_hardware_qcom_bootctrl" path="hardware\/qcom-caf\/bootctrl" remote="LineageOS" revision="lineage-19.1-caf" \/>/<project name="android_hardware_qcom_bootctrl" path="hardware\/qcom-caf\/bootctrl" remote="LineageOS" revision="lineage-20.0-caf" \/>/g' ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/.repo/manifests/twrp-default.xml
-        mv ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/bootable/recovery ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/bootable/recovery-ofrp
-        repo sync
-        mv ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/bootable/recovery-ofrp ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/bootable/recovery
-        cd ${GITHUB_WORKSPACE}
-        git clone https://github.com/ymdzq/scripts of_patch
-        cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/bootable/recovery
-        git fetch https://github.com/sekaiacg/twrp_recovery android-12.1 && git cherry-pick 443565c
-        git apply ${GITHUB_WORKSPACE}/of_patch/early-translation.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/fastbootd-optimize.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/Backup_Display_Name.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/5743.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/DST.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/settings.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/AVB20.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/Update_Log_File.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/Set_FBE_Status.patch
-        git apply ${GITHUB_WORKSPACE}/of_patch/Unmount-data.patch
-
     - name: Clone Device Tree
       run: |
         cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
@@ -118,8 +94,8 @@ jobs:
       id: fox_branch
       with:
         cond: ${{ github.event.inputs.MANIFEST_BRANCH == '11.0' || github.event.inputs.MANIFEST_BRANCH == '12.1' }}
-        if_true: lunch twrp_${{ github.event.inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
-        if_false: lunch omni_${{ github.event.inputs.DEVICE_NAME }}-eng && make clean && mka ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
+        if_true: lunch twrp_${{ github.event.inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ github.event.inputs.BUILD_TARGET }}image
+        if_false: lunch omni_${{ github.event.inputs.DEVICE_NAME }}-eng && make clean && mka ${{ github.event.inputs.BUILD_TARGET }}image
       
     - name: Building OrangeFox
       run: |
